--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: hmas-react
-Author: your-name
-Author URI: https://github.com/your-github
-Description: Create React WP Themes with no build configuration
-Version: 0.1
+Author: Harley Salas
+Author URI: https://github.com/harleysalas
+Description: Custom wordpress theme, built with React.
+Version: 0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: starter
-Text Domain: your-domain
+Tags: React, Custom, hmas-react
+Text Domain: harleysalas.com
 
 This theme, like WordPress, is licensed under the GPL.
 */
