--- a/src/components/Header/DesktopMenu/DesktopMenu.scss
+++ b/src/components/Header/DesktopMenu/DesktopMenu.scss
@@ -7,12 +7,16 @@
   text-transform: uppercase;
   font-size: 2rem;
   letter-spacing: 0.1rem;
+  font-weight: 400;
   position: relative;
   overflow: hidden;
 
   display: flex;
   align-items: center;
 
+  @include respond(tab-small) {
+    display: none;
+  }
   // display: none;
 
   &__item {
