--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,11 +12,36 @@
   justify-content: center;
   z-index: 1000;
 
+  @include respond(tab-small) {
+    height: 5rem;
+  }
+
+  &--animated {
+    animation: headerAnimated 1s cubic-bezier(0.86, 0, 0.07, 1) forwards;
+  }
+
+  &--hidden {
+    animation: headerHidden 1s cubic-bezier(0.86, 0, 0.07, 1) forwards;
+  }
+
   &__line {
+    position: relative;
     width: 100%;
     height: 2px;
-    background-color: $color-primary;
+    background-color: transparent;
     align-self: flex-start;
+
+    &::before {
+      position: absolute;
+      content: "";
+      left: -50%;
+      width: 100%;
+      height: 2px;
+      transform: scaleX(0);
+      background-color: $color-primary;
+      animation: headerDivider 0.72s 0.8s cubic-bezier(0.33, 0.55, 0.58, 0.97)
+        forwards;
+    }
   }
 
   &__container {
@@ -26,5 +51,11 @@
   &__logo {
     margin-right: auto;
     height: 3.5rem;
+    display: flex;
+    align-items: center;
+
+    @include respond(tab-small) {
+      height: 2.75rem;
+    }
   }
 }
