--- a/src/components/Header/MobileMenu/MobileMenuNav/MobileMenuNav.scss
+++ b/src/components/Header/MobileMenu/MobileMenuNav/MobileMenuNav.scss
@@ -2,25 +2,14 @@
 
 .mobile-menu {
   &__wrapper {
-    // position: absolute;
-    // top: 0;
-    // right: 0;
     width: 100vw;
     height: 100vh;
     background-color: $color-black;
-    // transform: translateX(100%);
-    // transition: transform 0.42s cubic-bezier(0.86, 0, 0.07, 1);
-    // animation: drawerOpen 1s cubic-bezier(0.86, 0, 0.07, 1) forwards;
     z-index: 1500;
 
     display: flex;
     align-items: center;
     justify-content: center;
-
-    &--active {
-      // transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1);
-      // transform: translateX(0);
-    }
   }
 
   &__nav {
@@ -28,7 +17,7 @@
     font-size: 3rem;
     text-transform: uppercase;
     color: $color-white;
-    font-weight: 500;
+    // font-weight: 500;
   }
 
   &__ul {
@@ -41,7 +30,7 @@
     transform: translateX(15rem);
     animation: drawerLinks 1.2s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
     animation-delay: 0.4s;
-    transition: color 0.11s cubic-bezier(0.86, 0, 0.07, 1);
+    // transition: color 0.11s cubic-bezier(0.86, 0, 0.07, 1);
     margin-bottom: 3rem;
 
     &:nth-of-type(2) {
@@ -59,17 +48,27 @@
     &:last-of-type {
       margin-bottom: 0;
     }
-
-    &:hover {
-      color: $color-primary;
-    }
   }
 
   &__li {
     position: relative;
     display: block;
+    transition: color 0.11s cubic-bezier(0.86, 0, 0.07, 1);
+
+    &:hover {
+      color: $color-primary;
+    }
+
+    .active & {
+      &:hover {
+        color: $color-white;
+      }
+    }
 
     &--active {
+      &:hover {
+        color: $color-white;
+      }
       &::before {
         position: absolute;
         content: "";
@@ -80,6 +79,18 @@
         left: 0;
       }
     }
+  }
+}
+
+.active .mobile-menu__li {
+  &::before {
+    position: absolute;
+    content: "";
+    height: 3px;
+    width: 100%;
+    background-color: $color-primary;
+    bottom: 0;
+    left: 0;
   }
 }
 
