--- a/src/sections/BlogSection/BlogSectionContent/BlogSectionContent.scss
+++ b/src/sections/BlogSection/BlogSectionContent/BlogSectionContent.scss
@@ -6,6 +6,16 @@
     padding: 2rem;
     box-shadow: 0px 0px 10px 3px rgba($color-black, 0.14);
     margin-bottom: 3rem;
+    transform: scale(1);
+    transition: all 0.24s cubic-bezier(0.14, 0, 0.93, 1);
+    transform: rotate(0.01deg) scale(1);
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.02);
+      box-shadow: 0 3px 5px 5px rgba($color-black, 0.07);
+      transition: all 0.72s cubic-bezier(0.86, 0, 0.07, 1);
+    }
   }
 
   &__title-container {
@@ -13,11 +23,12 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 2rem;
+    text-align: center;
   }
 
   &__title {
     text-transform: uppercase;
-    margin-right: 2rem;
+    margin-bottom: 0.5rem;
     flex-grow: 1;
     font-weight: 400;
     font-size: 2.8rem;
@@ -25,15 +36,16 @@
   }
 
   &__title-date {
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 500;
-    margin: auto 0 0 0;
-    padding-bottom: 0.1rem;
+    margin: 0 auto;
+    color: rgba($color-black, 0.72);
+    font-style: italic;
   }
 
   &__title-divider {
     width: 100%;
-    height: 4px;
+    height: 2px;
     border-radius: 3px;
     background-color: $color-primary;
     box-shadow: 0rem 0.5rem 1rem rgba($color-black, 0.24);
