--- a/src/sections/MailingSection/MailingSection.scss
+++ b/src/sections/MailingSection/MailingSection.scss
@@ -1,16 +1,20 @@
 @import "../../styles/variables.scss";
 
 .mailing {
-  background-color: $color-black;
+  background-color: $color-black-light;
   color: $color-white;
 
   &__half {
     width: 50%;
-    height: 22.5rem;
+    height: 25rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
+    @include respond(tab-small) {
+      width: 100%;
+    }
   }
 
   &__heading {
@@ -25,16 +29,28 @@
     color: rgba($color-white, 0.42);
     width: 72%;
     margin: 0 0 0 auto;
+
+    @include respond(tab-small) {
+      margin: 0 auto;
+    }
   }
 
   &__content-wrapper {
     text-align: right;
+
+    @include animateInRight;
+
+    @include respond(tab-small) {
+      text-align: center;
+    }
   }
 
   &__form {
     display: flex;
     flex-wrap: wrap;
     padding: 1rem;
+
+    @include animateInLeft;
   }
 
   &__input {
@@ -52,6 +68,10 @@
   &__join {
     margin: 1rem 0 0 1rem;
     width: 15rem;
+
+    @include respond(tab-small) {
+      margin: 1rem auto;
+    }
   }
 
   &__posted {
