--- a/src/sections/ServicesSection/ServiceCard/ServiceCard.scss
+++ b/src/sections/ServicesSection/ServiceCard/ServiceCard.scss
@@ -2,14 +2,41 @@
 
 .service__card {
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 27rem;
-  height: 20rem;
-  margin: 4.5rem;
+  margin: 2.5rem;
+  cursor: pointer;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28.5rem;
+    height: 21.5rem;
+    padding: 5rem 1rem;
+    box-shadow: 0 0 0 0 rgba($color-black, 0.07);
+    transform: rotate(0.01deg) scale(1);
+    transition: all 0.24s cubic-bezier(0.14, 0, 0.93, 1);
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 3px 5px 5px rgba($color-black, 0.07);
+      transition: all 0.72s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+
+    &--animated {
+      animation: cardAnimated 0.72s cubic-bezier(0.86, 0, 0.07, 1) forwards;
+    }
+  }
 
   &__heading {
     margin: 1rem 0 0 0;
@@ -21,7 +48,7 @@
   }
 
   &__more {
-    margin: auto 0 0 0;
+    margin: auto 0 1rem 0;
   }
 
   &__modal {
@@ -29,13 +56,12 @@
     background-color: $color-white;
     padding: 2rem 5rem;
     animation: slideInLeft 0.72s cubic-bezier(0.86, 0, 0.07, 1) forwards;
-    width: 72rem;
-    max-height: 90vh;
+    width: 100%;
+    max-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
-    // justify-content: center;
 
     &__bg {
       position: absolute;
@@ -65,10 +91,12 @@
 
     &__li {
       text-indent: 0;
+      margin-bottom: 1rem;
     }
 
     &__btn {
       display: block;
+      margin-bottom: 2rem;
     }
   }
 }
