--- a/src/sections/ServicesSection/ServicesSection.scss
+++ b/src/sections/ServicesSection/ServicesSection.scss
@@ -1,26 +1,40 @@
 @import "../../styles/variables.scss";
 
 .services {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
   text-align: center;
+  // min-height: calc(100vh - 5rem);
+  width: 100vw;
+
+  &__heading-container {
+    flex: 0 0 100%;
+    height: 15vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   &__heading {
+    display: inline-block;
     font-size: 4rem;
-    flex: 0 0 100%;
     position: relative;
 
-    &::after {
+    &::after,
+    &::before {
       content: "";
       position: absolute;
-      bottom: 0.4rem;
-      left: 50%;
-      width: 16rem;
+      width: 10rem;
       height: 2px;
       background-color: $color-primary;
-      transform: translateX(-50%);
+      top: 50%;
+    }
+
+    &::before {
+      left: -12rem;
+    }
+
+    &::after {
+      right: -12rem;
     }
   }
 }
