--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,51 +1,16 @@
-//MEDIA QUERY VARIABLES
-@mixin respond($breakpoint) {
-  @if $breakpoint == phone {
-    @media only screen and (max-width: 37.5em) {
-      @content;
-    } //600px
-  }
-
-  @if $breakpoint == tab-small {
-    @media only screen and (max-width: 700px) {
-      @content;
-    } // 700px
-  }
-
-  @if $breakpoint == tab-port {
-    @media only screen and (max-width: 56.25em) {
-      @content;
-    } //900px
-  }
-
-  @if $breakpoint == tab-land {
-    @media only screen and (max-width: 75em) {
-      @content;
-    } //1200px
-  }
-
-  @if $breakpoint == small-desktop {
-    @media only screen and (max-width: 93.75em) {
-      @content;
-    } //1500px
-  }
-
-  @if $breakpoint == big-desktop {
-    @media only screen and (min-width: 112.5em) {
-      @content;
-    } //1800
-  }
-}
-
 //FORMATTING
 .container {
   position: relative;
-  width: 1100px;
+  width: 110rem;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+
+  &--not-rel {
+    position: initial;
+  }
 
   &--padding-3 {
     padding: 3rem 0;
@@ -76,25 +41,34 @@
   }
 
   @include respond(small-desktop) {
-    width: 900px;
+    width: 95rem;
   }
 
   @include respond(tab-land) {
-    width: 750px;
+    width: 90rem;
   }
 
   @include respond(tab-port) {
-    width: 600px;
+    width: 70rem;
   }
 
   @include respond(tab-small) {
-    width: 450px;
+    width: 60rem;
+  }
+
+  @include respond(big-phone) {
+    width: 50rem;
   }
 
   @include respond(phone) {
-    width: 350px;
+    width: 37rem;
+  }
+
+  @include respond(small-phone) {
+    width: 31rem;
   }
 
   @include respond(big-desktop) {
+    width: 130rem;
   }
 }
