--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,14 +1,11 @@
 @import "./variables.scss";
-@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,900&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,900&display=swap');
 
-html {
-  font-size: 62.5%;
-}
 body {
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
   color: $color-black;
